[Client] Make New Room (MUST do UI Design)

--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Sign"/>
+        <activity android:name=".MakeNewRoom" />
     </application>
 
 </manifest>
