--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ChatApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -27,6 +28,7 @@
         </activity>
         <activity android:name=".Sign"/>
         <activity android:name=".MakeNewRoom" />
+        <activity android:name=".ChatMainActivity" />
     </application>
 
 </manifest>
