--- a/Client/app/build.gradle
+++ b/Client/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.0.+'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'git a
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile ('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
     }
